# cargo-fetch2

./: Cargo.toml  README.md
src/: main.rs
